--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
      
         <div class="black col-10  col-lg-6 col-xl-6 col-xxl-5 pl-3">
-            <img src="./main.jpg" class="tushar  img-fluid" alt="Bootstrap Themes" loading="lazy">
+            <img src="./main.jpg" class="ved  img-fluid" alt="Bootstrap Themes" loading="lazy">
             
              </div>
             </section>
