--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     <h2 class="circlefeature">Dynamic</h2>
                                 </div>
                                 <div class="circle3 long longtransform">
-                                    <p class="circle3info gyaan">Whether it's interactive features or seamless user interactions,I bring websites to life with dynamic elements that captivate and inspire.</p>
+                                    <p class="circle3info gyaan">Whether it's interactive features or seamless user interactions,I bring websites to life with dynamic elements.</p>
                                 </div>
                                 
                             </div>
