--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container mx-10 my-5">
 
         <header class="d-flex flex-wrap justify-content-center px-5 pt-5 pb-1 mb-5 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <a href="https://vedantdhande04.github.io/PortfolioYellow/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
               
               <img src="./logo.png" id="logo" class="logo logoborder" style="height: 80px; width: 80px">
             </a>
@@ -104,6 +104,7 @@
 
             <section class="amongus">
                 <div id="parentDiv">
+                    <div id="movingmsg"></div>
                     <div id="movingDiv"></div>
                   </div>
                   
