--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <section class="amongus">
                 <div id="parentDiv">
-                    <div id="movingmsg"></div>
+                    <div id="movingmsg" class=" msgimage"></div>
                     <div id="movingDiv"></div>
                   </div>
                   
